# techread

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md
resources/: config.toml
src/techread/: cli.py  config.py  db.py
src/techread/cli/: __init__.py  common.py  filters.py  posts.py  sources.py
src/techread/digest/: render.py
src/techread/ingest/: extract.py  fetch.py  rss.py
src/techread/rank/: scoring.py
src/techread/sources/: __init__.py  auto.py
src/techread/summarize/: llm.py  ollama.py
src/techread/tags/: __init__.py  llm.py
src/techread/utils/: text.py  time.py
tests/: test_auto.py  test_cli.py  test_config.py  test_db.py  test_extract.py  test_fetch.py  test_llm.py  test_render.py  test_rss.py  test_scoring.py  test_tags.py  test_text.py  test_time.py
