[project]
name = "techread"
version = "0.1.0"
description = "Local CLI tool to fetch, rank, and summarize technical blogs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{email="tritam.hoang@gmail.com"}]
dependencies = [
  "langchain>=1.0.3",
  "langchain-community>=0.4.1",
  "langchain-text-splitters>=1.0.0",
  "langchain-ollama>=1.0.0",
  "langchain-openai>=1.1.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "pytest-cov>=5.0.0",
  "trafilatura>=1.8.1",
  "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "black>=24.8.0",
  "isort>=5.13.2",
]

[project.scripts]
techread = "techread.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=techread --cov-report=term-missing --cov-report=xml --cov-report=html"
